--- a/WISLEY/Web.config
+++ b/WISLEY/Web.config
@@ -5,6 +5,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="ConnStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WISELY.mdf;Integrated Security=True"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
