--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -67,9 +67,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\WISELY.mdf" />
+    <Content Include="App_Data\WISELY_log.ldf">
+      <DependentUpon>WISELY.mdf</DependentUpon>
+    </Content>
+    <Content Include="bin\WISLEY.dll" />
+    <Content Include="bin\WISLEY.pdb" />
+    <Content Include="collab.aspx" />
     <Content Include="Global.asax" />
     <Content Include="group.aspx" />
     <Content Include="index.aspx" />
+    <Content Include="profile.aspx" />
     <Content Include="Public\css\bootstrap.css" />
     <Content Include="Public\css\bootstrap.min.css" />
     <Content Include="Public\css\mdb.css" />
@@ -118,6 +126,15 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\Collab\Post.cs" />
+    <Compile Include="collab.aspx.cs">
+      <DependentUpon>collab.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="collab.aspx.designer.cs">
+      <DependentUpon>collab.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Collab\PostDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -142,10 +159,29 @@
     <Compile Include="navbar.Master.designer.cs">
       <DependentUpon>navbar.Master</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Include="profile.aspx.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="profile.aspx.designer.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sidebar.Master.cs">
+      <DependentUpon>sidebar.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="sidebar.Master.designer.cs">
+      <DependentUpon>sidebar.Master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="navbar.Master" />
+    <Content Include="obj\Release\WISLEY.csproj.CoreCompileInputs.cache" />
+    <Content Include="obj\Release\WISLEY.csprojAssemblyReference.cache" />
     <None Include="packages.config" />
     <Content Include="Public\font\roboto\Roboto-Bold.eot" />
     <Content Include="Public\font\roboto\Roboto-Bold.ttf" />
@@ -225,6 +261,7 @@
     <Content Include="Public\font\fontawesome\fa-solid-900.ttf" />
     <Content Include="Public\font\fontawesome\fa-solid-900.woff" />
     <Content Include="Public\font\fontawesome\fa-solid-900.woff2" />
+    <Content Include="sidebar.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -233,7 +270,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
