--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -159,6 +159,13 @@
     <Compile Include="navbar.Master.designer.cs">
       <DependentUpon>navbar.Master</DependentUpon>
     </Compile>
+    <Compile Include="sidebar.master.cs">
+      <DependentUpon>sidebar.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="sidebar.master.designer.cs">
+      <DependentUpon>sidebar.master</DependentUpon>
+    </Compile>
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -170,18 +177,12 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sidebar.Master.cs">
-      <DependentUpon>sidebar.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="sidebar.Master.designer.cs">
-      <DependentUpon>sidebar.Master</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="navbar.Master" />
     <Content Include="obj\Release\WISLEY.csproj.CoreCompileInputs.cache" />
     <Content Include="obj\Release\WISLEY.csprojAssemblyReference.cache" />
+    <Content Include="sidebar.master" />
     <None Include="packages.config" />
     <Content Include="Public\font\roboto\Roboto-Bold.eot" />
     <Content Include="Public\font\roboto\Roboto-Bold.ttf" />
@@ -261,7 +262,6 @@
     <Content Include="Public\font\fontawesome\fa-solid-900.ttf" />
     <Content Include="Public\font\fontawesome\fa-solid-900.woff" />
     <Content Include="Public\font\fontawesome\fa-solid-900.woff2" />
-    <Content Include="sidebar.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
