--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -74,11 +74,15 @@
     <Content Include="bin\WISLEY.dll" />
     <Content Include="bin\WISLEY.pdb" />
     <Content Include="collab.aspx" />
-    <Content Include="comment.aspx" />
+    <Content Include="content\toastr.css" />
+    <Content Include="content\toastr.min.css" />
     <Content Include="editprofile.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="group.aspx" />
     <Content Include="index.aspx" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <Content Include="obj\Debug\WISLEY.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\WISLEY.dll" />
+    <Content Include="obj\Debug\WISLEY.pdb" />
     <Content Include="profile.aspx" />
     <Content Include="Public\css\bootstrap.css" />
     <Content Include="Public\css\bootstrap.min.css" />
@@ -127,7 +131,10 @@
     <Content Include="Public\js\popper.js" />
     <Content Include="Public\js\popper.min.js" />
     <Content Include="schedule.aspx" />
+    <Content Include="scripts\toastr.js" />
+    <Content Include="scripts\toastr.min.js" />
     <Content Include="todoplan.aspx" />
+    <Content Include="viewpost.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -136,17 +143,9 @@
     <Compile Include="BLL\Collab\Post.cs" />
     <Compile Include="collab.aspx.cs">
       <DependentUpon>collab.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="collab.aspx.designer.cs">
       <DependentUpon>collab.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="comment.aspx.cs">
-      <DependentUpon>comment.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="comment.aspx.designer.cs">
-      <DependentUpon>comment.aspx</DependentUpon>
     </Compile>
     <Compile Include="DAL\Collab\PostDAO.cs" />
     <Compile Include="editprofile.aspx.cs">
@@ -158,12 +157,6 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="group.aspx.cs">
-      <DependentUpon>group.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="group.aspx.designer.cs">
-      <DependentUpon>group.aspx</DependentUpon>
     </Compile>
     <Compile Include="group.Master.cs">
       <DependentUpon>group.Master</DependentUpon>
@@ -193,9 +186,6 @@
     <Compile Include="sidebar.master.designer.cs">
       <DependentUpon>sidebar.master</DependentUpon>
     </Compile>
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="profile.aspx.cs">
       <DependentUpon>profile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -206,7 +196,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="schedule.aspx.cs">
       <DependentUpon>schedule.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="schedule.aspx.designer.cs">
       <DependentUpon>schedule.aspx</DependentUpon>
@@ -218,6 +207,12 @@
     <Compile Include="todoplan.aspx.designer.cs">
       <DependentUpon>todoplan.aspx</DependentUpon>
     </Compile>
+    <Compile Include="viewpost.aspx.cs">
+      <DependentUpon>viewpost.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="viewpost.aspx.designer.cs">
+      <DependentUpon>viewpost.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="navbar.Master" />
@@ -225,6 +220,12 @@
     <Content Include="obj\Release\WISLEY.csprojAssemblyReference.cache" />
     <Content Include="sidebar.master" />
     <Content Include="group.Master" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Debug\WISLEY.csproj.CoreCompileInputs.cache" />
+    <Content Include="obj\Debug\WISLEY.csprojAssemblyReference.cache" />
+    <Content Include="content\toastr.less" />
+    <Content Include="content\toastr.scss" />
+    <Content Include="obj\Debug\WISLEY.csproj.CopyComplete" />
     <None Include="packages.config" />
     <Content Include="Public\font\roboto\Roboto-Bold.eot" />
     <Content Include="Public\font\roboto\Roboto-Bold.ttf" />
@@ -313,6 +314,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
