--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -141,6 +141,7 @@
     <Content Include="Public\js\popper.min.js" />
     <Content Include="Views\Profile\recoveraccount.aspx" />
     <Content Include="Views\Profile\register.aspx" />
+    <Content Include="Views\Profile\settings.aspx" />
     <Content Include="Views\Schedule\schedule.aspx" />
     <Content Include="Public\js\toast\toastr.js" />
     <Content Include="Public\js\toast\toastr.min.js" />
@@ -244,6 +245,13 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Profile\settings.aspx.cs">
+      <DependentUpon>settings.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Profile\settings.aspx.designer.cs">
+      <DependentUpon>settings.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Schedule\schedule.aspx.cs">
       <DependentUpon>schedule.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -372,6 +380,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Views\Gacha\" />
     <Folder Include="Views\Resources\" />
