--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -73,6 +73,7 @@
     </Content>
     <Content Include="bin\WISLEY.dll" />
     <Content Include="bin\WISLEY.pdb" />
+    <Content Include="Views\Group\createGroup.aspx" />
     <Content Include="Views\Profile\changepassword.aspx" />
     <Content Include="Views\Board\collab.aspx" />
     <Content Include="Public\css\toast\toastr.css" />
@@ -141,6 +142,7 @@
     <Content Include="Public\js\popper.min.js" />
     <Content Include="Views\Profile\recoveraccount.aspx" />
     <Content Include="Views\Profile\register.aspx" />
+    <Content Include="Views\Testing Folder\fileUploadTest.aspx" />
     <Content Include="Views\Profile\settings.aspx" />
     <Content Include="Views\Schedule\schedule.aspx" />
     <Content Include="Public\js\toast\toastr.js" />
@@ -155,6 +157,13 @@
   <ItemGroup>
     <Compile Include="BLL\Collab\Comment.cs" />
     <Compile Include="BLL\Collab\Post.cs" />
+    <Compile Include="Views\Group\createGroup.aspx.cs">
+      <DependentUpon>createGroup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Group\createGroup.aspx.designer.cs">
+      <DependentUpon>createGroup.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Profile\changepassword.aspx.cs">
       <DependentUpon>changepassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -245,6 +254,13 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Testing Folder\fileUploadTest.aspx.cs">
+      <DependentUpon>fileUploadTest.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Testing Folder\fileUploadTest.aspx.designer.cs">
+      <DependentUpon>fileUploadTest.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Profile\settings.aspx.cs">
       <DependentUpon>settings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -382,8 +398,8 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="Public\uploads\" />
     <Folder Include="Views\Gacha\" />
-    <Folder Include="Views\Resources\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
