--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -191,7 +191,9 @@
   <ItemGroup>
     <Compile Include="BLL\Collab\Comment.cs" />
     <Compile Include="BLL\Collab\Post.cs" />
+    <Compile Include="BLL\Group\Group.cs" />
     <Compile Include="BLL\User\User.cs" />
+    <Compile Include="DAL\Group\GroupDAO.cs" />
     <Compile Include="DAL\User\UserDAO.cs" />
     <Compile Include="Views\Gacha\Avatar.aspx.cs">
       <DependentUpon>Avatar.aspx</DependentUpon>
