--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -248,8 +248,11 @@
       <DependentUpon>changepassword.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Board\collab.aspx.cs">
-      <DependentUpon>collab.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BLL\Schedule\Planner.cs" />
+    <Compile Include="collab.aspx.cs">
+      <DependentUpon>collab.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Board\collab.aspx.designer.cs">
       <DependentUpon>collab.aspx</DependentUpon>
@@ -257,8 +260,11 @@
     <Compile Include="DAL\Collab\CommentDAO.cs" />
     <Compile Include="DAL\Collab\PostDAO.cs" />
     <Compile Include="Views\Profile\editprofile.aspx.cs">
-      <DependentUpon>editprofile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DAL\Schedule\PlannerDAO.cs" />
+    <Compile Include="editprofile.aspx.cs">
+      <DependentUpon>editprofile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Profile\editprofile.aspx.designer.cs">
       <DependentUpon>editprofile.aspx</DependentUpon>
