--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -248,6 +248,7 @@
       <DependentUpon>changepassword.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Board\collab.aspx.cs">
+      <DependentUpon>collab.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="BLL\Schedule\Planner.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="DAL\Collab\CommentDAO.cs" />
     <Compile Include="DAL\Collab\PostDAO.cs" />
     <Compile Include="Views\Profile\editprofile.aspx.cs">
+      <DependentUpon>editprofile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="DAL\Schedule\PlannerDAO.cs" />
