--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -179,6 +179,7 @@
     <Content Include="Public\js\popper.min.js" />
     <Content Include="Views\Profile\recoveraccount.aspx" />
     <Content Include="Views\Auth\register.aspx" />
+    <Content Include="Views\Resources\Test.aspx" />
     <Content Include="Views\Testing Folder\fileUploadTest.aspx" />
     <Content Include="Views\Profile\settings.aspx" />
     <Content Include="Views\Schedule\schedule.aspx" />
@@ -332,6 +333,13 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Resources\Test.aspx.cs">
+      <DependentUpon>Test.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Resources\Test.aspx.designer.cs">
+      <DependentUpon>Test.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Testing Folder\fileUploadTest.aspx.cs">
       <DependentUpon>fileUploadTest.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -477,7 +485,6 @@
     <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Public\uploads\groupImg\" />
-    <Folder Include="Views\Resources\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
