--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -110,6 +110,7 @@
     <Content Include="Views\Gacha\GachaSummon.aspx" />
     <Content Include="Views\Group\createGroup.aspx" />
     <Content Include="Views\Group\createGroup.html" />
+    <Content Include="Views\Group\joinGroup.aspx" />
     <Content Include="Views\Profile\changepassword.aspx" />
     <Content Include="Views\Board\collab.aspx" />
     <Content Include="Public\css\toast\toastr.css" />
@@ -242,6 +243,13 @@
     <Compile Include="Views\Group\createGroup.aspx.designer.cs">
       <DependentUpon>createGroup.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Group\joinGroup.aspx.cs">
+      <DependentUpon>joinGroup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Group\joinGroup.aspx.designer.cs">
+      <DependentUpon>joinGroup.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Profile\changepassword.aspx.cs">
       <DependentUpon>changepassword.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -334,7 +342,7 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-	    <Compile Include="Views\Resources\Test.aspx.cs">
+    <Compile Include="Views\Resources\Test.aspx.cs">
       <DependentUpon>Test.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
