--- a/WISLEY/Web.config
+++ b/WISLEY/Web.config
@@ -12,6 +12,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
+    <sessionState timeout="480"></sessionState>
   </system.web>
   
   <system.codedom>
