--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -1,4 +1,4 @@
-﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -182,13 +182,11 @@
     <Content Include="Views\Profile\forgotpassword.aspx" />
     <Content Include="Views\Auth\register.aspx" />
     <Content Include="Views\Resources\resourceUpload.aspx" />
-    <Content Include="Views\Schedule\editToDoPlan.aspx" />
     <Content Include="Views\Resources\Test.aspx" />
     <Content Include="Views\Schedule\editToDo.aspx" />
     <Content Include="Views\Schedule\schedule.aspx" />
     <Content Include="Views\Testing Folder\fileUploadTest.aspx" />
     <Content Include="Views\Profile\settings.aspx" />
-    <Content Include="Views\Schedule\scheduleEg.aspx" />
     <Content Include="Public\js\toast\toastr.js" />
     <Content Include="Public\js\toast\toastr.min.js" />
     <Content Include="Views\Schedule\todoplan.aspx" />
@@ -397,13 +395,6 @@
     </Compile>
     <Compile Include="Views\Profile\settings.aspx.designer.cs">
       <DependentUpon>settings.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Schedule\scheduleEg.aspx.cs">
-      <DependentUpon>scheduleEg.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Schedule\scheduleEg.aspx.designer.cs">
-      <DependentUpon>scheduleEg.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Schedule\todoplan.aspx.cs">
       <DependentUpon>todoplan.aspx</DependentUpon>
