--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -186,6 +186,7 @@
     <Content Include="Views\Auth\register.aspx" />
     <Content Include="Views\Resources\resourceUpload.aspx" />
     <Content Include="Views\Resources\Test.aspx" />
+    <Content Include="Views\Resources\viewResources.aspx" />
     <Content Include="Views\Schedule\editToDo.aspx" />
     <Content Include="Views\Schedule\schedule.aspx" />
     <Content Include="Views\Testing Folder\fileUploadTest.aspx" />
@@ -370,6 +371,13 @@
     </Compile>
     <Compile Include="Views\Resources\resourceUpload.aspx.designer.cs">
       <DependentUpon>resourceUpload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Resources\viewResources.aspx.cs">
+      <DependentUpon>viewResources.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Resources\viewResources.aspx.designer.cs">
+      <DependentUpon>viewResources.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Schedule\editToDo.aspx.cs">
       <DependentUpon>editToDo.aspx</DependentUpon>
