--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -531,6 +531,7 @@
     <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Public\uploads\groupImg\" />
+    <Folder Include="Public\uploads\groupResources\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
