--- a/WISLEY/Web.config
+++ b/WISLEY/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -6,7 +6,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WISELY.mdf;Integrated Security=True"/>
+    <add name="ConnStr" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WISELY.mdf;Integrated Security=True" />
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WISELY.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <system.web>
