Still WIP but RIP

--- a/WISLEY/WISLEY.csproj
+++ b/WISLEY/WISLEY.csproj
@@ -108,6 +108,9 @@
     <Content Include="Public\img\Badges\Badge_Group.png" />
     <Content Include="Public\img\Badges\Badge_Post.png" />
     <Content Include="Public\img\Logo\WISELY30.jpg" />
+    <Content Include="Public\videos\gacha_common %282%29.mp4" />
+    <Content Include="Public\videos\gacha_rare %282%29.mp4" />
+    <Content Include="Public\videos\gacha_super.mp4" />
     <Content Include="Views\Auth\logout.aspx" />
     <Content Include="Views\Gacha\Avatar.aspx" />
     <Content Include="Views\Gacha\Gacha.aspx" />
@@ -186,9 +189,9 @@
     <Content Include="Public\js\popper.min.js" />
     <Content Include="Views\Profile\forgotpassword.aspx" />
     <Content Include="Views\Auth\register.aspx" />
-    <Content Include="Views\Quiz\question.aspx" />
-    <Content Include="Views\Quiz\quizcreator.aspx" />
-    <Content Include="Views\Quiz\quizstart.aspx" />
+    <Content Include="Views\Quiztool\question.aspx" />
+    <Content Include="Views\Quiztool\quizcreator.aspx" />
+    <Content Include="Views\Quiztool\quizstart.aspx" />
     <Content Include="Views\Resources\resourceUpload.aspx" />
     <Content Include="Views\Resources\Test.aspx" />
     <Content Include="Views\Resources\viewResources.aspx" />
@@ -211,10 +214,14 @@
     <Compile Include="BLL\Gacha\Avatar.cs" />
     <Compile Include="BLL\Gacha\Gacha.cs" />
     <Compile Include="BLL\Group\Group.cs" />
+    <Compile Include="BLL\Quiz\Question.cs" />
+    <Compile Include="BLL\Quiz\Quiz.cs" />
     <Compile Include="BLL\User\User.cs" />
     <Compile Include="DAL\Gacha\AvatarDAO.cs" />
     <Compile Include="DAL\Gacha\GachaDAO.cs" />
     <Compile Include="DAL\Group\GroupDAO.cs" />
+    <Compile Include="DAL\Quiztool\QuestionDAO.cs" />
+    <Compile Include="DAL\Quiztool\QuizDAO.cs" />
     <Compile Include="DAL\User\UserDAO.cs" />
     <Compile Include="Views\Auth\logout.aspx.cs">
       <DependentUpon>logout.aspx</DependentUpon>
@@ -371,25 +378,25 @@
       <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Quiz\question.aspx.cs">
+    <Compile Include="Views\Quiztool\question.aspx.cs">
       <DependentUpon>question.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Quiz\question.aspx.designer.cs">
+    <Compile Include="Views\Quiztool\question.aspx.designer.cs">
       <DependentUpon>question.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Quiz\quizcreator.aspx.cs">
+    <Compile Include="Views\Quiztool\quizcreator.aspx.cs">
       <DependentUpon>quizcreator.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Quiz\quizcreator.aspx.designer.cs">
+    <Compile Include="Views\Quiztool\quizcreator.aspx.designer.cs">
       <DependentUpon>quizcreator.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Views\Quiz\quizstart.aspx.cs">
+    <Compile Include="Views\Quiztool\quizstart.aspx.cs">
       <DependentUpon>quizstart.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Quiz\quizstart.aspx.designer.cs">
+    <Compile Include="Views\Quiztool\quizstart.aspx.designer.cs">
       <DependentUpon>quizstart.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Resources\resourceUpload.aspx.cs">
